[package]
edition = "2021"
name = "event_streamer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aruna-rust-api = "0.5.0-beta.8"
async-channel = "1"
async-nats = "0"
async-stream = "0.3.3"
async-trait = "0.1"
chrono = "0.4.23"
crossbeam-utils = "0.8.12"
dotenv = "0.15.0"
env_logger = "0.9.3"
futures = "0.3.25"
log = "0.4.17"
prost = "0"
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1.11", features = ["net"]}
tonic = "0"
[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.2"
